--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,11 +7,10 @@ services:
         NODE_ENV: ${NODE_ENV:-local}
     container_name: sponge-app
     ports:
-      - '${PORT}:3000'
+      - '80:${PORT}'
     env_file:
       - .env
     environment:
-      - PORT=3000
       - DATABASE_URL=postgresql://${DB_USERNAME}:${DB_PASSWORD}@${DB_HOST}:${DB_PORT}/${DB_NAME}?schema=public
     restart: unless-stopped
     networks:
